--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="left" >
-        <ul id="container" style="list-style-type:square">
+        <ul id="container">
 
         </ul>
     </div>
